# eoir-database

./: .gitignore  CHANGELOG.md  DICTIONARY.md  README.md  VALIDATION.md  build_database.py  publish_to_hf.py  pyproject.toml
examples/: colab_quickstart.ipynb  court_analysis.py  nyv_detained_237.py  query_examples.sql
scripts/: EC2_SETUP.md  auto_rebuild.sh  rebuild_and_publish.sh
