[project]
name = "eoir-database"
version = "0.1.0"
description = "Build a clean DuckDB database from the EOIR immigration court FOIA data dump"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "duckdb>=1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests",
    "seaborn>=0.13.2",
    "tqdm",
]
